# indeed_bot

./: .gitignore  README.md  config.yaml  indeed_bot_min.py  pyproject.toml
_tests/: conftest.py  test_apply.py  test_domain_and_links.py
app/: bot.py  cli.py  main.py  server.py
app/models/: __init__.py  config.py
app/services/: __init__.py  answer_cache.py  browser.py  cv_generator.py  job_registry.py  pdf.py
app/utils/: __init__.py  cv_generator.py  indeed.py  logger.py
apps/backend/: pdf.py  server.py
apps/extension/: eslint.config.mjs  manifest.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
apps/extension/src/background/: index.ts  orchestrator.ts  tab-group.ts
apps/extension/src/content/: indeed.ts  mainworld.ts  smartapply.ts
apps/extension/src/options/: options.html  options.ts
apps/extension/src/popup/: popup.css  popup.html  popup.ts
assets/: base_cover_letter.md  base_cv.md  cover_template.html  cv_template.html
extension/: manifest.json  package.json  webpack.config.js
extension/assets/: cover_template.html  cv_template.html
extension/src/background/: index.ts  orchestrator.ts  tab-group.ts
extension/src/content/: indeed.ts  mainworld.ts  smartapply.ts
extension/src/options/: options.html  options.ts
extension/src/popup/: popup.css  popup.html  popup.ts
extension/src/services/: claude.ts  pdf.ts
extension/src/types/: index.ts
extension/src/utils/: i18n.ts  selectors.ts
memory/: resume-upload-fix.md
scripts/: apply_jobs.py  collect_links.py  get_token.py  run_min.py
(+9 files in other folders)
