[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "indeed-bot"
version = "0.1.0"
description = "Indeed Auto-Apply — Chrome extension + AI backend"
readme = "README.md"
authors = [
  { name = "meteor314" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2",
  "playwright>=1.58.0",
]

[project.urls]
Homepage = "https://github.com/TechWithTy/indeed_bot"

[tool.uv]
package = false

[tool.hatch.build.targets.wheel]
packages = ["apps"]
